<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout2_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/txv_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="16pt"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2_center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/pgrb_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/txv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textAlignment="center"
                tools:text="Usuário" />

            <EditText
                android:id="@+id/edt_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:textAlignment="center"
                android:text="" />

            <TextView
                android:id="@+id/txv_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textAlignment="center"
                tools:text="Senha" />

            <EditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:text="" />

            <CheckBox
                android:id="@+id/chkb_remember_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/save_pass"
                tools:text="Salvar Senha" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_singin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/singin"
                    android:onClick="btnEntrarOnClick"/>

                <Button
                    android:id="@+id/btn_settings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:onClick="btnSettingsOnClick"/>

            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
    </LinearLayout>

    </LinearLayout>

</FrameLayout>